fix header overflow + add section at line 13

--- a/source/main_page/main.css
+++ b/source/main_page/main.css
@@ -11,6 +11,8 @@ body{
   overflow: scroll;
 }
 
+/* #### Header Layout #### */
+
 /**
  * Grid display for organizing header element
  */
@@ -24,7 +26,7 @@ body{
   background-color: #23DCB0;
   overflow: hidden;
   width: 100%;
-  height: 12%;
+  height: 3.5rem;
 
   /*Define header position to be fixed at the top*/
   position: fixed;
